use 'valueOf' and 'toString' instead of 'new'